k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudcoreops-app
spec:
  type: ClusterIP
  selector:
    app: cloudcoreops-app
  ports:
    - port: 80
      targetPort: 5000
