k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudcoreops-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudcoreops-app
                port:
                  number: 80
